+ Реализовали игру змейка

--- a/Snake/SnakeApp.csproj
+++ b/Snake/SnakeApp.csproj
@@ -48,15 +48,19 @@
     <Compile Include="Enams\MoveDirection.cs" />
     <Compile Include="Infrastructure\Figure.cs" />
     <Compile Include="Infrastructure\IDrawable.cs" />
+    <Compile Include="Infrastructure\IFigure.cs" />
     <Compile Include="Infrastructure\IFoodGenerator.cs" />
     <Compile Include="Infrastructure\IMap.cs" />
     <Compile Include="Infrastructure\IMapGenerator.cs" />
     <Compile Include="Infrastructure\IPoint.cs" />
+    <Compile Include="Infrastructure\ISnake.cs" />
     <Compile Include="Models\Figures\Line.cs" />
     <Compile Include="Models\Figures\Snake.cs" />
+    <Compile Include="Models\Game.cs" />
     <Compile Include="Models\Map\FoodGenerator.cs" />
     <Compile Include="Models\Map\Map.cs" />
     <Compile Include="Models\Map\MapGenerator.cs" />
+    <Compile Include="Models\Player.cs" />
     <Compile Include="Models\Point.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
